--- a/web/custom.css
+++ b/web/custom.css
@@ -19,3 +19,11 @@ div[prop=parts] img {
   width: 256px;
   margin: auto;
 }
+
+redoc {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
