--- a/web/bootstrap.css
+++ b/web/bootstrap.css
@@ -1,5 +1,5 @@
 /*!
- * Bootswatch v4.4.1
+ * Bootswatch v4.4.1 Simplex
  * Homepage: https://bootswatch.com
  * Copyright 2012-2020 Thomas Park
  * Licensed under MIT
