--- a/bitbeam_catalog/templates/index.html
+++ b/bitbeam_catalog/templates/index.html
@@ -1,41 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <!-- needed for mobile devices -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-
-    <link href="/bootstrap.css" rel="stylesheet">
-    <link href="/custom.css" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
-
-        <a class="navbar-brand" page="catalog" href="/#"><big>m-BITBEAM</big></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" page="about" href="/#catalog">Catalog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" page="about" href="/#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" page="api" href="/api">API</a>
-            </li>
-          </ul>
-        </div>
-      </div><!-- container -->
-    </nav>
-
+{# vim:set softtabstop=2: -#}
+{% set page = "" %}
+{% include("_header.html") %}
     <div class="container">
       <div class="row" id="catalog_page" style="display: none;">
         <div class="col-2 sidenav">
