--- a/bitbeam_catalog/templates/index.html
+++ b/bitbeam_catalog/templates/index.html
@@ -1,7 +1,7 @@
 {# vim:set softtabstop=2: -#}
 {% set page = "" %}
 {% include("_header.html") %}
-    <div class="container">
+    <div class="container wrap">
       <div class="row" id="catalog_page" style="display: none;">
         <div class="col-2 sidenav">
           <nav class="nav flex-column nav-pills" prop="categories">
@@ -18,17 +18,54 @@
             </ul>
           </nav>
         </div>
-      </div><!-- catalog -->
+      </div>{# catalog #}
 
       <div id="about_page" style="display:none;">
         <h2>About</h2>
 
         <p>This is on-line catalog for
-          <a href="https://github.com/m-Bitbeam/m-bitbeam">m-bitbeam</a> library.
+          <a href="https://github.com/m-Bitbeam/m-bitbeam">m-bitbeam</a>
+          library.
         </p>
 
+        <h3>Links</h3>
+        <ul>
+          <li>Start of <a href="https://bitbeam.org/">Bitbeam</a> construction
+          kit.</li>
+          <li>Many <a href="http://www.tfsoft.cz/m-bitbeam/index_en.html">
+            materials</a>about m-Bitbeam project, and some parts, which are
+            still not in this catalog for now.</li>
+          <li>Projects on
+            <a href="https://www.prusaprinters.org/search/all?q=bitbeam">
+            PrusaPrinters</a> catalog.</li>
+          <li>Projects on
+            <a href="https://www.thingiverse.com/tag:bitbeam">Thingiverse</a>
+            catalog.</li>
+        </ul>
+
+        <b>Sources:</b>
+        <ul>
+          <li>This <a href="https://github.com/m-Bitbeam/m-bitbeam-catalog">web</a>
+            page repository.</li>
+          <li>m-Bitbeam
+            <a href="https://github.com/m-Bitbeam/m-bitbeam-catalog">pieces</a>
+            repository.</li>
+          <li><a href="https://github.com/m-Bitbeam/m-bitbeam-models">Models</a>
+            repository.</li>
+          <li>OpenSCAD<a href="https://github.com/ondratu/bitbeam-lib">library</a>
+            for crating your own pieces.</li>
+        </ul>
+
+        <h3>Contact</h3>
+        <ul>
+          <li>Issues on <a href="https://github.com/m-Bitbeam/m-bitbeam/issues">
+            GitHub.com</a></li>
+          <li>Email: <b>mcbig</b> at <b>zeropage</b> dot <b>cz</b></li>
+          <li>Twitter: @mcbig_cz</li>
+        </ul>
+
         <h3>Donation</h3>
-        <p>If you like this project, and you want to donate it, plese do it
+        <p>If you like this project, and you want to donate it, please do it
           by this button
           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
             <input type="hidden" name="cmd" value="_donations" />
@@ -38,25 +75,28 @@
             <img alt="" border="0" src="https://www.paypal.com/en_CZ/i/scr/pixel.gif" width="1" height="1" />
           </form>
           </p>
+      </div>{# /about page #}
 
-        <h3>Links</h3>
+      <div id="download_page" style="display:none;">
+        <h2>Download</h2>
         <ul>
-          <li>Github <a href="https://github.com/m-Bitbeam/m-bitbeam">repository</a>
-            of parts.</li>
-          <li></li>
+          <li>Generated <a href="">stl</a> files for 3D printing.</li>
+          <li>Generated <a href="">dat</a> files for LDraw.</li>
         </ul>
 
-        <h3>Contact</h3>
-        <p>Source code of this calaog is on
-          <a href="https://github.com/m-Bitbeam/m-bitbeam-catalog">Github</a> too,
-          so you can creete some issue if you want.</p>
+        <h3>Authors</h3>
+        <p><i>TODO</i></p>
+
+        <h3>Licence</h3>
+        <p><i>TODO</i></p>
+
       </div>
 
-      <div class="row" id="api_page" style="display:none;">
-        <redoc spec-url="openapi.yaml"></redoc>
-      </div>
-
-    </div><!-- / container -->
+      <div class="footer">{# creating space for real footer #}</div>
+    </div>{# /container #}
+    <div class="container footer">
+        <center><small></i>Create by Ondřej Tůma 2021.</i></small></center>
+    </div>
 
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/popper.min.js"></script>
