--- a/bitbeam_catalog/templates/index.html
+++ b/bitbeam_catalog/templates/index.html
@@ -101,6 +101,9 @@
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+
     <script src="/js/index.js"></script>
+    <script src="/js/catalog.js"></script>
+    <script src="/js/page.js"></script>
   </body>
 </html>
