--- a/bitbeam_catalog/templates/index.html
+++ b/bitbeam_catalog/templates/index.html
@@ -20,6 +20,23 @@
         </div>
       </div>{# catalog #}
 
+      <div id="part_page" style="display:none;">
+        <h2></h2>
+        <div class="row">
+            <div class="col"><img></div>
+            <div class="col-3">
+                <h4>Categories:</h4>
+                <ul class="list-groups"></ul>
+                <h4>Files:</h4>
+                <ul class="list-groups">
+                  <li class="list-group-item"><a type="stl">STL</a></li>
+                  <li class="list-group-item"><a type="dat">LDraw</a></li>
+                </ul>
+            </div>
+        </div>
+        <p></p>
+      </div>
+
       <div id="about_page" style="display:none;">
         <h2>About</h2>
 
@@ -48,12 +65,12 @@
           <li>This <a href="https://github.com/m-Bitbeam/m-bitbeam-catalog">web</a>
             page repository.</li>
           <li>m-Bitbeam
-            <a href="https://github.com/m-Bitbeam/m-bitbeam-catalog">pieces</a>
+            <a href="https://github.com/m-Bitbeam/m-bitbeam-catalog">parts</a>
             repository.</li>
           <li><a href="https://github.com/m-Bitbeam/m-bitbeam-models">Models</a>
             repository.</li>
           <li>OpenSCAD<a href="https://github.com/ondratu/bitbeam-lib">library</a>
-            for crating your own pieces.</li>
+            for crating your own parts.</li>
         </ul>
 
         <h3>Contact</h3>
@@ -104,6 +121,7 @@
 
     <script src="/js/index.js"></script>
     <script src="/js/catalog.js"></script>
+    <script src="/js/part.js"></script>
     <script src="/js/page.js"></script>
   </body>
 </html>
