--- a/bitbeam_catalog/templates/_header.html
+++ b/bitbeam_catalog/templates/_header.html
@@ -27,7 +27,7 @@
               <a class="nav-link" page="about" href="/#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" page="download" href="/#download">Download</a>
+              <a class="nav-link {{ 'active' if page == 'licence' else '' }}" page="licence" href="/licence">Licence</a>
             </li>
             <li class="nav-item">
               <a class="nav-link {{ 'active' if page == 'api' else '' }}" page="api" href="/api">API</a>
