--- a/bitbeam_catalog/templates/_header.html
+++ b/bitbeam_catalog/templates/_header.html
@@ -5,7 +5,14 @@
     <!-- needed for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-
+    <meta content="m-Bitbeam construction kit parts catalog" lang="en" name="description" property="og:description">
+    <meta content="m-Bitbeam catalog" name="og:title" property="og:title">
+    <meta content="m-Bitbeam catalog" name="twitter:title" property="twitter:title">
+    <meta content="website" name="og:type" property="og:type">
+    <meta content="https://catalog.m-bitbeam.org/png/bb-h-5x3.png" name="og:image" property="og:image">
+    <meta content="summary" name="twitter:card" property="twitter:card">
+    <meta content="@mcbig_cz" name="twitter:creator" property="twitter:creator">
+    <meta content="m-bitbeam bitbeam catalog list parts construction kit steam" name="keywords">
     <link href="/bootstrap.css" rel="stylesheet">
     <link href="/custom.css" rel="stylesheet">
   </head>
