CI files and new links

--- a/bitbeam_catalog/templates/index.html
+++ b/bitbeam_catalog/templates/index.html
@@ -58,9 +58,13 @@
           <li>Many <a href="http://www.tfsoft.cz/m-bitbeam/index_en.html">
             materials</a> about m-Bitbeam project, and some parts, which are
             still not in this catalog for now.</li>
+          <li>Construction set <a href="https://www.e-mole.cz/diy/m-bitbeam">
+              presentation</a> in Czech language.</li>
+          <li><a href="https://hackaday.io/project/158815-m-bitbeam-construction-set">
+              Hackday</a> project page.</li>
           <li>Projects on
             <a href="https://www.prusaprinters.org/search/all?q=bitbeam">
-            PrusaPrinters</a> catalog.</li>
+              PrusaPrinters</a> catalog.</li>
           <li>Projects on
             <a href="https://www.thingiverse.com/tag:bitbeam">Thingiverse</a>
             catalog.</li>
