api and lib version

--- a/bitbeam_catalog/templates/index.html
+++ b/bitbeam_catalog/templates/index.html
@@ -48,7 +48,7 @@
 
         <p>This is on-line catalog for
           <a href="https://github.com/m-Bitbeam/m-bitbeam">m-bitbeam</a>
-          library.
+          library <span prop="version"></span>.
         </p>
 
         <h3>Links</h3>
@@ -117,6 +117,7 @@
     <script src="/js/index.js"></script>
     <script src="/js/catalog.js"></script>
     <script src="/js/part.js"></script>
+    <script src="/js/about.js"></script>
     <script src="/js/page.js"></script>
   </body>
 </html>
