--- a/bitbeam_catalog/templates/index.html
+++ b/bitbeam_catalog/templates/index.html
@@ -111,8 +111,7 @@
     </div>
 
     <script src="/js/jquery-3.4.1.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 
     <script src="/js/index.js"></script>
     <script src="/js/catalog.js"></script>
