--- a/bitbeam_catalog/templates/_header.html
+++ b/bitbeam_catalog/templates/_header.html
@@ -5,14 +5,14 @@
     <!-- needed for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <meta content="m-Bitbeam construction kit parts catalog" lang="en" name="description" property="og:description">
-    <meta content="m-Bitbeam catalog" name="og:title" property="og:title">
-    <meta content="m-Bitbeam catalog" name="twitter:title" property="twitter:title">
+    <meta content="Bitbeam construction kit parts catalog" lang="en" name="description" property="og:description">
+    <meta content="Bitbeam catalog" name="og:title" property="og:title">
+    <meta content="Bitbeam catalog" name="twitter:title" property="twitter:title">
     <meta content="website" name="og:type" property="og:type">
-    <meta content="https://catalog.m-bitbeam.org/png/bb-h-5x3.png" name="og:image" property="og:image">
+    <meta content="https://catalog.bitbeam.cc/png/bb-h-5x3.png" name="og:image" property="og:image">
     <meta content="summary" name="twitter:card" property="twitter:card">
     <meta content="@mcbig_cz" name="twitter:creator" property="twitter:creator">
-    <meta content="m-bitbeam bitbeam catalog list parts construction kit steam" name="keywords">
+    <meta content="bitbeam m-bitbeam catalog list parts construction kit steam" name="keywords">
     <link href="/bootstrap.css" rel="stylesheet">
     <link href="/custom.css" rel="stylesheet">
   </head>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
       <div class="container">
 
-        <a class="navbar-brand" page="catalog" href="/#"><big>m-BITBEAM</big></a>
+        <a class="navbar-brand" page="catalog" href="https://bitbeam.cc"><big>BITBEAM</big></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,21 +28,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" page="catalog" href="/#catalog">Catalog</a>
+              <a class="nav-link" href="https://bitbeam.cc/en/#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" page="about" href="/#about">About</a>
+              <a class="nav-link" href="https://bitbeam.cc/en/history">History</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {{ 'active' if page == 'licence' else '' }}" page="licence" href="/licence">Licence</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {{ 'active' if page == 'api' else '' }}" page="api" href="/api">API</a>
+              <a class="nav-link active" page="catalog" href="/#">Catalog</a>
             </li>
           </ul>
           <ul class="navbar-nav">
-            <li>
-              <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/m-Bitbeam/m-bitbeam"><i class="fa fa-github"></i> GitHub</a>
+            <li class="nav-item">
+              <a class="nav-link {{ 'active' if page == 'api' else '' }}" page="api" href="/api">API</a>
             </li>
           </ul>
         </div>
