--- a/bitbeam_catalog/templates/_header.html
+++ b/bitbeam_catalog/templates/_header.html
@@ -36,6 +36,12 @@
             <li class="nav-item">
               <a class="nav-link active" page="catalog" href="/#">Catalog</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://forum.bitbeam.cc">Forum</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://geekzoo.cz">E-shop</a>
+            </li>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
