--- a/bitbeam_catalog/templates/index.html
+++ b/bitbeam_catalog/templates/index.html
@@ -8,8 +8,8 @@
           </nav>
           <nav class="nav flex-column nav-pills" prop="links">
             Download
-            <a class="nav-link" href="/data/m-bitbeam-catalog-{{ version }}.zip">STL files</a>
-            <a class="nav-link" href="/data/m-bitbeam-parts-{{ version }}.zip">LDraw files</a>
+            <a class="nav-link" href="/data/bitbeam-stl-{{ version }}.zip">STL files</a>
+            <a class="nav-link" href="/data/bitbeam-parts-{{ version }}.zip">LDraw files</a>
           </nav>
         </div>
 
